--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Texty Notepad</title>
+  <title>Texty</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>📝 Texty Notepad</h1>
+  <h1>Texty Notepad</h1>
 
 
 
   <!-- Dark Mode Toggle -->
   <label class="toggle">
     <input type="checkbox" id="darkModeToggle" />
-    <span>🌙 Dark Mode</span>
+    <span>Dark Mode</span>
   </label>
 
   <!-- File Upload -->
@@ -35,12 +36,12 @@
       <option value="txt">.txt</option>
       <option value="texty">.texty</option>
     </select>
-    <button id="saveBtn">💾 Save</button>
+    <button id="saveBtn">Save</button>
   </div>
 
   <!-- Markdown Preview -->
   <div id="previewContainer">
-    <h3>🔍 Markdown Preview</h3>
+    <h3>Markdown Preview</h3>
     <div id="markdownPreview"></div>
   </div>
 
